--- a/app/views/sidebar.html
+++ b/app/views/sidebar.html
@@ -80,6 +80,9 @@
 			<button ng-click="forgot()">
 				   {{ 'sidebar.auth.forgotpw.submit' | translate }}
 			</button>
+			<button ng-click="mode = 'login'">
+				   {{ 'sidebar.auth.forgotpw.back' | translate }}
+			</button>
 
 		</form>
 	</div>
