get soonepisodes via rest api

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,21 +1,3 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo5!</h1>
-  <p class="lead">
-    Always a pleasure scaffolding your apps.
-  </p>
-</div>
-
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+<div ng-repeat="ep in episodes">
+  {{ ep }}
 </div>
