--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -258,7 +258,7 @@ input {
 textarea {
   padding: 1em;
 }
-input:not([type="submit"]),
+input:not([type="button"]),
 textarea {
   background-color: #fefefe;
   color: #111;
@@ -271,7 +271,7 @@ textarea:focus {
   outline: none;
   box-shadow: inset 0 0 0.5em rgba(0, 0, 0, .1);
 }
-input[type='submit'],
+input[type='button'],
 button {
   background-color: #40a662;
   color: #fefefe;
@@ -279,15 +279,15 @@ button {
   border: 1px  solid #007369;
   box-shadow: inset 0 -2px 0 rgba(0,0,0,.2);
 }
-input[type='submit']:hover,
-input[type="submit"]:focus
+input[type='button']:hover,
+input[type="button"]:focus
 button:hover,
 button:focus {
   background-color: #007369;
   cursor: pointer;
   outline: none;
 }
-input[type='submit']:active,
+input[type='button']:active,
 button:active {
   position: relative;
   top: 1px;
