fix login menu arrow in mobile-layout

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -507,7 +507,7 @@ footer p:not(:last-child) {
 	nav {
 		margin: 0px -1em;
 	}
-	nav .toggle .arrow
+	nav .toggle .arrow,
 	nav .toggle:hover .arrow {
 		display: none !important;
 	}
