fixed fira in dist-build

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -43,7 +43,7 @@
 }
 
 /* Typeface */
-$firadirectory: '../bower_components/fira';
+$firadirectory: '/fonts/fira';
 
 @font-face {
 	font-family: 'FiraSans';
