--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -270,6 +270,7 @@ textarea:focus {
 	box-shadow: inset 0 0 0.5em rgba(0, 0, 0, .1);
 }
 input[type='button'],
+input[type='submit'],
 button {
 	background-color: #40a662;
 	color: #fefefe;
@@ -278,7 +279,9 @@ button {
 	box-shadow: inset 0 -2px 0 rgba(0,0,0,.2);
 }
 input[type='button']:hover,
-input[type="button"]:focus
+input[type='button']:focus,
+input[type='submit']:hover,
+input[type='submit']:focus,
 button:hover,
 button:focus {
 	background-color: #007369;
@@ -286,6 +289,7 @@ button:focus {
 	outline: none;
 }
 input[type='button']:active,
+input[type='submit']:active,
 button:active {
 	position: relative;
 	top: 1px;
