--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 /* General */
 *,
 *:before,
@@ -244,39 +246,36 @@ input::-ms-clear {
 }
 input,
 textarea {
-	line-height: 2;
+	font-size: 1em;
 	display: block;
 	width: 100%;
-	padding: .2em 1em;
+	padding: .1em 1em;
 	border-radius: .4em;
-}
-input {
-	padding: .2em 1em;
 }
 textarea {
 	padding: 1em;
 }
-input:not([type="button"]),
+input:not([type="button"]):not([type="submit"]),
 textarea {
-	background-color: #fefefe;
+	background-color: #eee;
 	color: #111;
-	font: normal .8em 'FiraMono', monospace;
+	font: normal 1em 'FiraMono', monospace;
 	line-height: 2;
-	border: 1px  solid #40a662;
 }
 input:focus,
 textarea:focus {
 	outline: none;
-	box-shadow: inset 0 0 0.5em rgba(0, 0, 0, .1);
+	box-shadow: inset 0 0 6px rgba(0,0,0,.3);
 }
 input[type='button'],
 input[type='submit'],
 button {
 	background-color: #40a662;
 	color: #fefefe;
-	font-size: .8em;
-	border: 1px  solid #007369;
-	box-shadow: inset 0 -2px 0 rgba(0,0,0,.2);
+	font-size: 1em;
+	line-height: 2;
+	border: none;
+	box-shadow: inset 0 -3px 0 rgba(0,0,0,.3);
 }
 input[type='button']:hover,
 input[type='button']:focus,
@@ -302,12 +301,16 @@ a:link,
 a:visited {
 	color: #40a662;
 	font-weight: bold;
-	text-decoration: underline;
+	text-decoration: none;
 }
 a:hover,
 a:focus,
 a:active {
 	color: #007369;
+}
+
+a:active {
+	text-decoration: underline;
 }
 
 /* Body */
@@ -334,8 +337,7 @@ body {
 /* Sidebar */
 .sidebar {
 	background-color: #eee;
-	border-right: 1px solid #888;
-	box-shadow: 0 .25em 1em rgba(0,0,0,.2);
+	box-shadow: 0 .25em 1em rgba(0,0,0,.5);
 	min-width: 20em;
 	max-width: 20em;
 }
@@ -366,11 +368,8 @@ nav ul {
 nav li {
 
 }
-nav li {
-	border-top: 1px solid #888;
-}
-nav li:last-child {
-	border-bottom: 1px solid #888;
+nav li:not(:last-child) {
+	border-bottom: 3px solid #eee;
 }
 nav ul li > a:link,
 nav ul li > a:visited,
@@ -516,11 +515,10 @@ footer p:not(:last-child) {
 	.account form {
 		padding: 2em;
 		position: absolute;
-		border: 1px solid #888;
 		border-left: none;
 		border-top-right-radius: .4em;
 		border-bottom-right-radius: .4em;
-		box-shadow: .25em .25em 1em rgba(0,0,0,.2);
+		box-shadow: .25em .25em 1em rgba(0,0,0,.5);
 		z-index: 1337;
 	}
 	.account .button {
